log/build_2022-03-10_22-40-18/py_package/stderr.log
  File "/home/ghani/my_ws/install/py_package/lib/python3.8/site-packages/py_package/controller.py", line 30
    def main(args=None):
    ^
SyntaxError: invalid syntax

